--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,6 +8,7 @@
         {% endblock %}
     </head>
     <body>
+    {{ include('navbar.html.twig') }}
         {% block body %}<h1>Hello Practica</h1>{% endblock %}
 
 
