added some kind of documentation

--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -23,7 +23,7 @@
                     <div class="input-group">
                         <input type="text" class="form-control border-right-0" placeholder="...">
                         <div class="input-group-append">
-                            <button class="btn btn-outline-primary border-left-0" type="button">GO</button>
+                            <button class="btn btn-outline-dark border-left-0" type="button">Go</button>
                         </div>
                     </div>
                 </form>
