--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,1 +1,37 @@
 {% extends 'base.html.twig' %}
+{% block body %}
+    <h1>Articles</h1>
+
+    <div class="container">
+        <div class="container">
+            <div class="row">
+                {% if articles %}
+                    {% for article in articles %}
+
+                        <div class="col-md-4 border-light mb-4 " >
+                            <div class="card align-items-center" style="width: 18rem;">
+{#                                <img src="data:image/jpeg;base64,{{ article.articlesImage }}" />#}
+                                <div class="card-body">
+                                    <h5 class="card-title">{{ article.articlesTitle }}</h5>
+                                    <p class="card-text">{{ article.articlesContent }}</p>
+                                    <div class="card-footer text-muted">
+                                          {{ article.articlesDate|date("Y/m/d") }}
+                                    </div>
+{#                                    <a href="/current/{{ article.id }}" class="btn btn-primary">See all</a>#}
+{#                                    <a href="/{{ article.id }}" class="btn btn-primary">Like</a>#}
+{#                                    <p>Likes-{{ article.likes }}</p>#}
+{#                                </div>#}
+
+                            </div>
+                        </div>
+                        </div>
+
+                    {% endfor %}
+                {% else %}
+                    <h1>Nu este disponibil nici un articol</h1>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+
+{% endblock %}
