added the routes to the navbar

--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -9,10 +9,10 @@
                     <a class="nav-link pl-0" href="/">Home </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">New Post</a>
+                    <a class="nav-link" href="/new">New Post</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="//codeply.com">Ranking</a>
+                    <a class="nav-link" href="/ranking">Ranking</a>
                 </li>
             </ul>
         </div>
