--- a/templates/indexv3.html.twig
+++ b/templates/indexv3.html.twig
@@ -12,39 +12,42 @@
                 <!-- Blog Post -->
                 {% for article in articles %}
                     <div class="card mb-4">
-                    <div class="card-footer text-muted m-0 p-0">
-                        <div class="card-header row m-0 ">
-                            <div class="col-6 d-flex justify-content-start inline-block">
-                                {{ article.articlesAuthors.authorsName }}
-                            </div>
-                            <div class="col-6 d-flex justify-content-end inline-block">
-                                {{ article.articlesDate|date("Y/m/d") }}
+                        <div class="card-footer text-muted m-0 p-0">
+                            <div class="card-header row m-0 ">
+                                <div class="col-6 d-flex justify-content-start inline-block">
+                                    {{ article.articlesAuthors.authorsName }}
+                                </div>
+                                <div class="col-6 d-flex justify-content-end inline-block">
+                                    {{ article.articlesDate|date("Y/m/d") }}
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
-                    <div class="card-body">
-                    <h2 class="card-title text-center">{{ article.articlesTitle }}</h2>
-                    <p class="card-text block-with-text">{{ article.articlesContent }}</p>
 
-                    <div class=" row m-0 ">
-                    <div class="col-6 d-flex justify-content-start inline-block">
-                        <a href="/current/{{ article.articlesId }}" class="btn btn-primary">Read More</a>
-                    </div>
-                    <div class="col-6 d-flex justify-content-end inline-block">
+                        <div class="card-body">
+                            <h2 class="card-title text-center">{{ article.articlesTitle }}</h2>
+                            <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
+                            <p class="card-text block-with-text">{{ article.articlesContent }}</p>
 
-                    {% if app.request.cookies.has('1')  %}
+                            <div class=" row m-0 ">
+                                <div class="col-6 d-flex justify-content-start inline-block">
+                                    <a href="/current/{{ article.articlesId }}" class="btn btn-primary">Read More</a>
+                                </div>
+                                <div class="col-6 d-flex justify-content-end inline-block">
 
-                    <a href="/{{ article.articlesId }}" class="btn btn-primary disabled"></a>
-                    <a href="/{{ article.articlesId }}" class="btn disabled">{{ article.articlesVotes }}</a>
-                    {% else %}
+                                    {% if app.request.cookies.has('1') %}
 
-                        <a href="/{{ article.articlesId }}" class="btn btn-primary">Like</a>
-                        <a href="/{{ article.articlesId }}" class="btn disabled">{{ article.articlesVotes }}</a>
-                    {% endif %}
-                    </div>
-                    </div>
-                    </div>
+                                        <a href="/{{ article.articlesId }}" class="btn btn-primary disabled">Like</a>
+                                        <a href="/{{ article.articlesId }}"
+                                           class="btn disabled">{{ article.articlesVotes }}</a>
+                                    {% else %}
+
+                                        <a href="/{{ article.articlesId }}" class="btn btn-primary">Like</a>
+                                        <a href="/{{ article.articlesId }}"
+                                           class="btn disabled">{{ article.articlesVotes }}</a>
+                                    {% endif %}
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 {% endfor %}
 
