--- a/templates/singleArticle.html.twig
+++ b/templates/singleArticle.html.twig
@@ -1,20 +1,44 @@
 {% extends 'base.html.twig' %}
 
-{% block title  %}Influencer's Article{% endblock %}
+{% block title %}Influencer's Article{% endblock %}
 
 {% block body %}
-    <div class="card text-center">
-        <div class="card-header">
-            Featured
-        </div>
-        <div class="card-body">
-            <h5>{{ article.articlesAuthors.authorsName }} - {{ article.articlesDate|date("Y/m/d") }}</h5>
-            <h3 class="card-title">{{ article.articlesTitle }}</h3>
-            <p class="card-text">{{ article.articlesContent }}</p>
-            <<a href="/" class="btn btn-primary">Like</a>
-        </div>
-        <div class="card-footer text-muted">
-            2 days ago
+    <div class="container mt-4">
+        <div class="card mb-4">
+            <div class="card-footer text-muted m-0 p-0">
+                <div class="card-header row m-0 ">
+                    <div class="col-6 d-flex justify-content-start inline-block">
+                        {{ article.articlesAuthors.authorsName }}
+                    </div>
+                    <div class="col-6 d-flex justify-content-end inline-block">
+                        {{ article.articlesDate|date("Y/m/d") }}
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-body">
+                <h2 class="card-title text-center">{{ article.articlesTitle }}</h2>
+                <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
+                <p class="card-text ">{{ article.articlesContent }}</p>
+
+                <div class=" row m-0 ">
+                    <div class="col-6 d-flex justify-content-start inline-block">
+                        <a href="/" class="btn btn-primary">Back</a>
+                    </div>
+                    <div class="col-6 d-flex justify-content-end inline-block">
+
+                        {% if app.request.cookies.has('1')  %}
+
+                            <a href="/{{ article.articlesId }}" class="btn btn-primary disabled">Like</a>
+                            <a href="/{{ article.articlesId }}" class="btn disabled">{{ article.articlesVotes }}</a>
+                        {% else %}
+
+                            <a href="/{{ article.articlesId }}" class="btn btn-primary">Like</a>
+                            <a href="/{{ article.articlesId }}" class="btn disabled">{{ article.articlesVotes }}</a>
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
