--- a/templates/ranking.html.twig
+++ b/templates/ranking.html.twig
@@ -19,8 +19,8 @@
 
             <tr>
                 <th scope="row">1</th>
-                <td>{{ author.authorsName }}</td>
-                <td>{{ author.authorsVotes }}</td>
+                <td>{{ author.name }}</td>
+                <td>{{ author.votes }}</td>
 
             </tr>
         {% endfor %}
