--- a/templates/newArticle.html.twig
+++ b/templates/newArticle.html.twig
@@ -21,13 +21,13 @@
         </div>
         <div class="form-group">
             <label for="image">Image 750x300</label>
-            <input type="file" class="form-control-file"  id="image">
+            <input type="file" formmethod="post"  class="form-control-file"  id="image" name="image">
         </div>
         <div class="form-group">
-            <label for="tags">Email address</label>
+            <label for="tags">Tags</label>
             <input type="text" class="form-control" id="tags" name="tags" placeholder="Tag1 Tag2 Tag3 Tag4">
         </div>
-        <button type="submit" formmethod="post" class="btn btn-primary">Submit</button>
+        <button type="submit" formmethod="post" formaction="{{ path('create') }}" formenctype="multipart/form-data" class="btn btn-primary">Submit</button>
     </form>
     </div>
 
