--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -16,7 +16,7 @@
                 </li>
             </ul>
         </div>
-        <a href="/" class="navbar-brand mx-auto d-block text-center order-0 order-md-1 w-25">Influencers</a>
+        <a href="/" class="navbar-brand mx-auto d-block text-center order-0 order-md-1 w-25 p-0" ><img src="{{ asset('logo/logo.png') }}" style="height: 50px;width: 150px"></a>
         <div class="navbar-collapse collapse dual-nav w-50 order-2">
             <ul class="nav navbar-nav ml-auto">
                 <form class="ml-3 my-auto d-inline w-100">
