--- a/templates/newArticle.html.twig
+++ b/templates/newArticle.html.twig
@@ -3,13 +3,15 @@
 
     <div class="container">
     <form>
-        <div class="form-group">
+        <div class="row">
+        <div class="form-group col-6">
             <label for="name">Name</label>
             <input type="text" class="form-control" id="name" name="name" placeholder="Mihai Ion">
         </div>
-        <div class="form-group">
+        <div class="form-group col-6">
             <label for="email">Email address</label>
             <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com">
+        </div>
         </div>
         <div class="form-group">
             <label for="title">Title</label>
@@ -20,13 +22,14 @@
             <textarea class="form-control" id="content" name="content" rows="3"></textarea>
         </div>
         <div class="form-group">
-            <label for="image">Image 750x300</label>
-            <input type="file" formmethod="post"  class="form-control-file"  id="image" name="image">
-        </div>
-        <div class="form-group">
             <label for="tags">Tags</label>
             <input type="text" class="form-control" id="tags" name="tags" placeholder="Tag1 Tag2 Tag3 Tag4">
         </div>
+        <div class="form-group">
+            <label for="image">Image 750x300</label>
+            <input type="file" formmethod="post"  class="form-control-file"  id="image" name="image">
+        </div>
+
         <button type="submit" formmethod="post" formaction="{{ path('create') }}" formenctype="multipart/form-data" class="btn btn-primary">Submit</button>
     </form>
     </div>
