--- a/templates/singleArticle.html.twig
+++ b/templates/singleArticle.html.twig
@@ -18,7 +18,10 @@
 
             <div class="card-body">
                 <h2 class="card-title text-center">{{ article.title }}</h2>
-                <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
+                {% if article.image != null %}
+                    <img class="card-img-top" src="{{ asset('images/' ~  article.image ) }}"
+                         alt="Something is not right">
+                {% endif %}
                 <p class="card-text ">{{ article.content }}</p>
 
                 <div class=" row m-0 ">
@@ -27,9 +30,10 @@
                     </div>
                     <div class="col-6 d-flex justify-content-end inline-block">
 
-                        {% if app.request.cookies.has('1')  %}
+                        {% if app.request.cookies.has(article.id) %}
 
                             <a href="/{{ article.id }}" class="btn btn-primary disabled">Like</a>
+
                             <a href="/{{ article.id }}" class="btn disabled">{{ article.votes }}</a>
                         {% else %}
 
@@ -38,6 +42,11 @@
                         {% endif %}
                     </div>
                 </div>
+            <div class="row m-0" >
+                <div class="col d-flex justify-content-center inline-block">
+                    <a href="/edit/{{ article.id }}" class="btn btn-primary">Edit</a>
+                </div>
+            </div>
             </div>
         </div>
     </div>
