added a part from form edit

--- a/templates/singleArticle.html.twig
+++ b/templates/singleArticle.html.twig
@@ -44,7 +44,9 @@
                 </div>
             <div class="row m-0" >
                 <div class="col d-flex justify-content-center inline-block">
-                    <a href="/edit/{{ article.id }}" class="btn btn-primary">Edit</a>
+                    <a href="{{ path('edit', {
+                        id: article.id
+                    }) }}" class="btn btn-primary">Edit</a>
                 </div>
             </div>
             </div>
