--- a/templates/indexv3.html.twig
+++ b/templates/indexv3.html.twig
@@ -124,7 +124,7 @@
     <!-- /.container -->
 
     <!-- Footer -->
-    <footer class="py-5 bg-dark">
+    <footer class="py-5 page-footer bg-dark">
         <div class="container">
             <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
         </div>
