--- a/templates/edit.html.twig
+++ b/templates/edit.html.twig
@@ -1,16 +1,13 @@
 {% extends 'base.html.twig' %}
 {% block body %}
 
-    <div class="container">
+    <div class="container text-center mt-5">
+        <h1>Change it !</h1>
         <form>
-
-
-            {{ form_start(articleForm) }}
-            {{ form_row(articleForm.title, {
-                label: 'Article title'
-            }) }}
+            {{ form_start(articleForm, {'method': 'PUT'}) }}
+            {{ form_row(articleForm.title,
+                {label: 'Article title' }) }}
             {{ form_row(articleForm.content) }}
-            <button type="submit" class="btn btn-primary">Update!</button>
             {{ form_end(articleForm) }}
         </form>
     </div>
