--- a/templates/newArticle.html.twig
+++ b/templates/newArticle.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block body %}
 
-    <div class="container">
+    <div class="container mt-5 text-center">
     <form>
         <div class="row">
         <div class="form-group col-6">
@@ -26,7 +26,7 @@
             <input type="text" class="form-control" id="tags" name="tags" placeholder="Tag1 Tag2 Tag3 Tag4">
         </div>
         <div class="form-group">
-            <label for="image">Image 750x300</label>
+            <label for="image" >Image 750x300</label>
             <input type="file" formmethod="post"  class="form-control-file"  id="image" name="image">
         </div>
 
