--- a/templates/singleArticle.html.twig
+++ b/templates/singleArticle.html.twig
@@ -42,12 +42,14 @@
                         {% endif %}
                     </div>
                 </div>
+                {% if article.votes == 0 %}
             <div class="row m-0" >
                 <div class="col d-flex justify-content-center inline-block">
                     <a href="{{ path('edit', {
                         id: article.id
                     }) }}" class="btn btn-primary">Edit</a>
                 </div>
+                {% endif %}
             </div>
             </div>
         </div>
