--- a/templates/ranking.html.twig
+++ b/templates/ranking.html.twig
@@ -19,7 +19,7 @@
 
             <tr>
 
-                <td>{{ author.name }}</td>
+                <td><a href="/authorsView/{{ author.id }}">{{ author.name }}</a></td>
                 <td>{{ author.votes }}</td>
 
             </tr>
