--- a/templates/singleArticle.html.twig
+++ b/templates/singleArticle.html.twig
@@ -51,8 +51,7 @@
                 <div class="row m-0">
                     <div class="col d-flex justify-content-center inline-block">
                         <a href="{{ path('edit', {
-                            id: article.id
-                        }) }}" class="btn btn-primary">Edit</a>
+                            id: article.id }) }}" class="btn btn-primary">Edit</a>
                     </div>
                     {% endif %}
                 </div>
@@ -76,7 +75,6 @@
                 <br>
             </div>
         </div>
-
     </div>
 {% endblock %}
 
