ajax call-stil working

--- a/templates/indexv3.html.twig
+++ b/templates/indexv3.html.twig
@@ -41,12 +41,24 @@
                                     <a href="/current/{{ article.id }}/{{ article.tags }}/{{ article.author.id }}" class="btn btn-primary">Read More</a>
                                 </div>
                                 {% if app.request.cookies.has(article.id) %}
+
                                 <div class="col-6 d-flex justify-content-end inline-block">
-                                        <a  class="btn btn-primary " id="likeBtn-{{ article.id }}">Like</a>
-                                        <div class="btn disabled" id="votes-{{ article.id }}">{{ article.votes }}</div>
+
+                                    <a  class="btn btn-primary disabled" id="likeBtn-{{ article.id }}">Like</a>
+
+                                        <div class="btn disabled" id="votes-{{ article.id }}">{{ article.votes }} Points</div>
 
                                     {% else %}
                                     <div class="col-6 d-flex justify-content-end inline-block">
+                                        <div class="dropdown">
+                                            <select id="vote" name="vote" class="form-control input-md">
+                                                <option selected value="1">5</option>
+                                                <option value="2">4</option>
+                                                <option value="3">3</option>
+                                                <option value="4">2</option>
+                                                <option  value="5">1</option>
+                                            </select>
+                                        </div>
                                         <a  class="btn btn-primary " id="likeBtn-{{ article.id }}">Like</a>
                                         <div  class="btn disabled"   id="votes-{{ article.id }}">{{ article.votes }}</div>
                                     {% endif %}
@@ -58,24 +70,23 @@
 
                             <script>
                                 $(document).on('click', 'a#likeBtn-{{ article.id }}', function(){
+                                    var points = $('#vote option:selected').text();
                                     $.ajax({
-                                        url:'{{ (path('liked',{id:article.id})) }}',
+                                        url:'{{ (path('liked',{id:article.id,value:5})) }}',
                                         type: "GET",
                                         dataType: "json",
                                         data: {
-                                            "likes": ""
                                         },
                                         async: true,
                                         success: function (data)
                                         {
                                             console.log(data)
+                                            console.log(points)
                                             $('div#votes-{{ article.id }}').html(data.likes);
                                             $('#likeBtn-{{ article.id }}').addClass("disabled");
-
                                         }
                                     });
                                     return false;
-
                                 });
                             </script>
 
