--- a/templates/indexv3.html.twig
+++ b/templates/indexv3.html.twig
@@ -5,13 +5,12 @@
         <div class="row">
 
             <!-- Blog Entries Column -->
-            <div class="col-md-8">
-                <h1 class="my-4">
-                </h1>
+            <div class="col-md-12">
+
 
                 <!-- Blog Post -->
                 {% for article in articles %}
-                    <div class="card mb-4">
+                    <div class="card mb-4 mt-4">
                         <div class="card-footer text-muted m-0 p-0">
                             <div class="card-header row m-0 ">
                                 <div class="col-6 d-flex justify-content-start inline-block">
@@ -27,7 +26,7 @@
                             <h2 class="card-title text-center">{{ article.title }}</h2>
                                 {% if article.image != null %}
                                     <img class="card-img-top" src="{{ asset('images/' ~  article.image ) }}" style="height: 300px; width: 690px" alt="Something is not right">
-                            {% endif %}
+                                {% endif %}
 
                             <p class="card-text block-with-text">{{ article.content }}</p>
                             <div class="row card-text mb-3 text-muted">
@@ -51,78 +50,16 @@
 
                 {% endfor%}
 
-                {#                <!-- Pagination -->#}
-                {#                <ul class="pagination justify-content-center mb-4">#}
-                {#                    <li class="page-item">#}
-                {#                        <a class="page-link" href="#">&larr; Older</a>#}
-                {#                    </li>#}
-                {#                    <li class="page-item disabled">#}
-                {#                        <a class="page-link" href="#">Newer &rarr;</a>#}
-                {#                    </li>#}
-                {#                </ul>#}
 
             </div>
 
             <!-- Sidebar Widgets Column -->
-            <div class="col-md-4">
 
-{#                <!-- Search Widget -->#}
-{#                <div class="card my-4">#}
-{#                    <h5 class="card-header">Search</h5>#}
-{#                    <div class="card-body">#}
-{#                        <div class="input-group">#}
-{#                            <input type="text" class="form-control" placeholder="Search for...">#}
-{#                            <span class="input-group-append">#}
-{#                <button class="btn btn-secondary" type="button">Go!</button>#}
-{#              </span>#}
-{#                        </div>#}
-{#                    </div>#}
-{#                </div>#}
-
-                <!-- Categories Widget -->
-                <div class="card my-4">
-                    <h5 class="card-header">Tags</h5>
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <ul class="list-unstyled mb-0">
-                                    <li>
-                                        <a href="#">Web Design</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">HTML</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Freebies</a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="col-lg-6">
-                                <ul class="list-unstyled mb-0">
-                                    <li>
-                                        <a href="#">JavaScript</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">CSS</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Tutorials</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-            </div>
-
-        </div>
         <!-- /.row -->
 
     </div>
     <!-- /.container -->
-
+</div>
     <!-- Footer -->
     <footer class="py-5 page-footer bg-dark">
         <div class="container">
